# MinRankSolver

./: CMakeLists.txt  README.txt
minrank-instances/: glue-test-case0.txt  glue-test-case1.txt  glue-test-case2.txt  glue-test-case3.txt  test-case0.txt  test-case1.txt  test-case10.txt  test-case11.txt  test-case12.txt  test-case2.txt  test-case3.txt  test-case5.txt  test-case6.txt  test-case7.txt  test-case8.txt  test-case9.txt
src/: CMakeLists.txt  main.c
src/mrs/: CMakeLists.txt  bitmap.c  bitmap.h  bitmap_table.h  blake2s-core.S  blake2s-generic.c  blake2s.c  blake2s.h  block_lanczos.c  block_lanczos.h  block_lanczos_gf16.c  block_lanczos_gf16.h  bytearray.c  bytearray.h  c128m_gf16.c  c128m_gf16.h  c256m_gf16.c  c256m_gf16.h  c512m_gf16.c  c512m_gf16.h  c64m_generic.c  c64m_generic.h  c64m_gf16.c  c64m_gf16.h  cmsm_generic.c  cmsm_generic.h  gf.h  gf16.c  gf16.h  gf31.c  gf31.h  gfa.c  gfa.h  gfm.c  gfm.h  grp128_gf16.c  grp128_gf16.h  grp256_gf16.c  grp256_gf16.h  grp512_gf16.c  (+66 more)
