cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
project(mrs LANGUAGES C ASM)

set(SRC
    util.h
    util.c
    uint64a.h
    uint64a_generic.c
    uint64a_avx.c
    uint64a_avx2.c
    uint64a_avx512.c
    blake2s.h
    blake2s.c
    blake2s-generic.c
    blake2s-core.S
    math_util.h
    math_util.c
    thpool.h
    thpool.c
    options.h
    options.c
    bitmap_table.h
    bitmap_table.c
    bitmap.h
    bitmap.c
    uint24a.h
    uint24a.c
    uint128_t.h
    uint256_t.h
    uint256_t.c
    uint512_t.h
    uint512_t.c
    uint1024_t.h
    uint1024_t.c
    hmap.h
    hmap.c
    gf16.h
    gf16.c
    gf31.h
    gf31.c
    bytearray.h
    bytearray.c
    gfm.h
    gfm.c
    mdeg.h
    mdeg.c
    mono.h
    mono.c
    minrank.h
    minrank.c
    ks.h
    ks.c
    gfa.h
    gfa.c
    mdmac.h
    mdmac.c
    cmsm_generic.h
    cmsm_generic.c
    rmsm_generic.h
    rmsm_generic.c
    rc64m_generic.h
    rc64m_generic.c
    r64m_generic.h
    r64m_generic.c
    c64m_generic.h
    c64m_generic.c
    block_lanczos.h
    block_lanczos.c
    loader.h
    loader.c
    grp64_gf16.h
    grp64_gf16.c
    grp128_gf16.h
    grp128_gf16.c
    grp256_gf16.h
    grp256_gf16.c
    grp512_gf16.h
    grp512_gf16.c
    rc64m_gf16.h
    rc64m_gf16.c
    rc64m_gf16_common.c
    rc128m_gf16.h
    rc128m_gf16.c
    rc256m_gf16.h
    rc256m_gf16.c
    rc512m_gf16.h
    rc512m_gf16.c
    r64m_gf16.h
    r64m_gf16.c
    r64m_gf16_parallel.h
    r128m_gf16.h
    r128m_gf16.c
    r128m_gf16_parallel.h
    r128m_gf16_parallel.c
    r256m_gf16.h
    r256m_gf16.c
    r512m_gf16.h
    r512m_gf16.c
    c64m_gf16.h
    c64m_gf16.c
    c128m_gf16.h
    c128m_gf16.c
    c256m_gf16.h
    c256m_gf16.c
    c512m_gf16.h
    c512m_gf16.c
    matrix_gf16.h
    block_lanczos_gf16.h
    block_lanczos_gf16.c
)

add_library(mrs STATIC ${SRC})
install(TARGETS mrs DESTINATION ${mrs_INSTALL_LIB_DIR})
target_link_libraries(mrs m)
